Header component and Floating Nav JSX

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KaikeRochaDev</title>
+    <title>Angeline Miller - Dev Full Stack</title>
 </head>
 
 <body>
